[project]
name = "icedit-comfyui-official"
description = "This node pack provides the official ComfyUI workflow for ICEdit."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/hayd-zju/ICEdit-ComfyUI-official"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayd"
DisplayName = "ICEdit-ComfyUI-official"
Icon = ""
